--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ x86/
 [Aa][Rr][Mm]64/
 bld/
 [Bb]in/
+![Bb]in/[Dd]ata/
 [Oo]bj/
 [Oo]ut/
 [Ll]og/
@@ -35,6 +36,7 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+!.vscode/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
