--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ bin/data/scores.txt
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 !.vscode/
+.vscode/browse*
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
